--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "start": "SET PORT=3000 && react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "CI=false NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
